--- a/helm_charts/mdss/templates/deployments-template.yml
+++ b/helm_charts/mdss/templates/deployments-template.yml
@@ -13,7 +13,10 @@ spec:
   selector:
     matchLabels:
       app: {{ $component.name | quote }}
-  strategy: {}
+  {{- if $component.strategy}}
+  strategy:
+    {{- toYaml $component.strategy | nindent 4 }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -26,22 +29,34 @@ spec:
         - envFrom:
             - configMapRef:
                 name: {{ $.Values.mdss_config_map_env_name | quote }}
+          {{ if $component.custom_repo -}}
+          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image (index $.Values "mdss-common-environment").BRANCH | quote }}
+          {{- else -}}
+          image: {{ $component.image | quote }}
+          {{- end }}
+          imagePullPolicy: {{ $.Values.imagePullPolicy }}
           {{- if $component.env }}
           env:
             {{- toYaml $component.env | nindent 12 }}
           {{- end }}
-          {{- if $component.custom_repo }}
-          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image (index $.Values "mdss-common-environment").BRANCH | quote }}
-          {{- else }}
-          image: {{ $component.image | quote }}
-          {{- end }}
-          imagePullPolicy: {{ $.Values.imagePullPolicy }}
           name: {{ $component.name | quote }}
           {{- if $component.ports }}
           ports:
           {{- range $component.ports }}
             - containerPort: {{ .port }}
           {{- end }}
+          {{- end }}
+          {{- if $component.livenessProbe }}
+          livenessProbe:
+            {{- toYaml $component.livenessProbe | nindent 12 }}
+          {{- end }}
+          {{- if $component.startupProbe }}
+          startupProbe:
+            {{- toYaml $component.startupProbe | nindent 12 }}
+          {{- end }}
+          {{- if $component.readinessProbe }}
+          readinessProbe:
+            {{- toYaml $component.readinessProbe | nindent 12 }}
           {{- end }}
           {{- if $component.command }}
           command: 
@@ -55,7 +70,7 @@ spec:
           securityContext:
             {{- toYaml $component.securityContext | nindent 12 }}
           {{- end }}
-          {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.customMounts)}}
+          {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.extraVolumeMounts)}}
           volumeMounts:
             {{- if $component.mountConfig }}
             - name: {{ $component.mountConfig.configName }}
@@ -69,14 +84,21 @@ spec:
               subPath: {{ $component.name }}
               {{- end }}
             {{ end }}
-            {{- if $component.customMounts }}
-              {{- toYaml $component.customMounts | nindent 12 }}
+            {{- if $component.extraVolumeMounts }}
+              {{- toYaml $component.extraVolumeMounts | nindent 12 }}
             {{- end }}
           {{- end }}
           {{- if $component.resources }}
           resources:
             {{- toYaml $component.resources | nindent 12 }}
           {{- end }}
+      {{- if $component.sidecars }}
+        {{- toYaml $component.sidecars | nindent 8 }}
+      {{- end }}
+      {{- if $component.initContainers }}
+      initContainers:
+        {{- toYaml $component.initContainers | nindent 8 }}
+      {{- end }}
           {{- if $component.update_ca }}
           lifecycle:
             postStart:
@@ -91,7 +113,7 @@ spec:
       {{- if $component.customPodDefinitions }}
         {{- toYaml $component.customPodDefinitions | nindent 6 }}
       {{- end }}
-      {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.customVolumes)}}
+      {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.extraVolumes)}}
       volumes:
         {{- if $component.mountConfig }}
         - name: {{ $component.mountConfig.configName }}
@@ -107,11 +129,14 @@ spec:
         {{ else }}
         - name: {{ $component.name }}
           persistentVolumeClaim:
-            claimName: {{ printf "%s-pvc" $.Values.storage_name }}
+            claimName: {{ printf "%s" $.Values.storage_name }}
+            {{ end }}
+        {{ end }}
+        {{- if $component.extraVolumes -}}
+          {{- range $volumeLabel, $volume := $component.extraVolumes }}
+        -
+            {{- toYaml $volume | nindent 10 }}
         {{- end }}
-        {{- end }}
-        {{- if $component.customVolumes }}
-          {{- toYaml $component.customVolumes | nindent 8 }}
         {{- end }}
       {{- end }}
       hostAliases:
