--- a/helm_charts/icap/templates/secret-template.yml
+++ b/helm_charts/icap/templates/secret-template.yml
@@ -1,54 +1,9 @@
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.https.certSecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.https.certSecretSubPath }}: ""
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.https.certKeySecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.https.certKeySecretSubPath }}: ""
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.icaps.certSecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.icaps.certSecretSubPath }}: ""
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.icaps.certKeySecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.icaps.certKeySecretSubPath }}: ""
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.nginxs.certSecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.nginxs.certSecretSubPath }}: ""
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: {{ .Values.icap_components.md_icapsrv.tls.nginxs.certKeySecret }}
-#   namespace: {{ .Release.Namespace }}
-# type: Opaque
-# data:
-#   {{ .Values.icap_components.md_icapsrv.tls.nginxs.certKeySecretSubPath }}: ""
-# ---
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.icap_components.md_icapsrv.custom_secret }}
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/resource-policy": keep
+type: Opaque
