--- a/helm_charts/mdcore/values.yaml
+++ b/helm_charts/mdcore/values.yaml
@@ -146,7 +146,7 @@ core_components:
 
   md-core:
     name: md-core
-    image: opswat/metadefendercore-debian:5.8.0         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
+    image: opswat/metadefendercore-debian:5.9.0         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
     replicas: 1                                         # Sets the number of replicas if you want to have multiple MD Core instances
     env:
       - name: MD_USER
@@ -233,15 +233,9 @@ core_components:
       type: RollingUpdate
       rollingUpdate:
         maxSurge: 0
-    extraVolumes:
-      waitForServicesScript:
-        name: wait-for-hub-services
-        configMap:
-          name:  wait-for-hub-services
-          defaultMode: 0777
     initContainers:
       - name: check-db-ready
-        image: opswat/metadefendercore-debian:5.8.0
+        image: opswat/metadefendercore-debian:5.9.0
         imagePullPolicy: IfNotPresent
         envFrom:
           - configMapRef:
@@ -249,15 +243,10 @@ core_components:
         command: ['sh', '-c', 
           'until pg_isready -h $DB_HOST -p $DB_PORT; 
           do echo waiting for database; sleep 2; done;']
-      - name: wait-for-hub-services
-        image: opswat/metadefendercore-debian:5.8.0
-        imagePullPolicy: IfNotPresent
-        command: [ '/wait-for-hub-services.sh' ]
-        volumeMounts:
-          - name:  wait-for-hub-services
-            mountPath: /wait-for-hub-services.sh
-            subPath: wait-for-hub-services.sh
+
+
 #========================================== MDHUB MODULE ==========================================
+## To be used together with example file mdcore-mdhub-module.yml 
   md-hub:
     image: opswat/mdhub-debian:latest
     name: md-hub
@@ -278,7 +267,7 @@ core_components:
           defaultMode: 0777
     initContainers:
       - name: wait-for-hub-services
-        image: opswat/metadefendercore-debian:5.8.0
+        image: opswat/metadefendercore-debian:5.9.0
         imagePullPolicy: IfNotPresent
         command: [ '/wait-for-hub-services.sh' ]
         volumeMounts:
