--- a/helm_charts/icap/templates/ingress-template.yml
+++ b/helm_charts/icap/templates/ingress-template.yml
@@ -6,7 +6,6 @@ metadata:
   name: {{ .Values.icap_ingress.name }}
   namespace: {{ .Release.Namespace }}
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.icap_ingress.class }}
     ingress.kubernetes.io/rewrite-target: /
 ## If you have enabled HPA or scale up more instances please uncomment configuration below
   {{- if .Values.autoscaling.enabled }}
@@ -19,6 +18,7 @@ metadata:
       proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
   {{- end }}
 spec:
+  ingressClassName: {{ .Values.icap_ingress.class }}
   rules:
   - host: {{ .Values.icap_ingress.host }} 
     http:
