--- a/helm_charts/icap/values.yaml
+++ b/helm_charts/icap/values.yaml
@@ -42,7 +42,11 @@ olms:
   olms_socket_port: ""
   olms_rule: "Default_Rule"
   olms_comment: ""
-
+proxy:
+  enabled: false
+  http_proxy: ""
+  https_proxy: ""
+  no_proxy: localhost
 ## Ingress setting for MD ICAP Server
 icap_ingress:
   name: ingress-mdicapsrv
@@ -136,7 +140,7 @@ icap_components:
             cpu: "100m"       # Maximum cpu limit
     name: md-icapsrv
     # Overrides the default docker image for the MD ICAP Server service, this value can be changed if you want to set a different version of MD ICAP Server
-    image: opswat/metadefendericapsrv-debian:5.5.0
+    image: opswat/metadefendericapsrv-debian:5.5.1
     # Warning: When to use this feature!
     # Sets the number of replicas if you want to have multiple MD ICAP Server instances
     replicas: 1
