--- a/helm_charts/mdcore/values.yaml
+++ b/helm_charts/mdcore/values.yaml
@@ -146,7 +146,7 @@ core_components:
 
   md-core:
     name: md-core
-    image: opswat/metadefendercore-debian:5.9.0         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
+    image: opswat/metadefendercore-debian:5.10.0         # Overrides the default docker image for the MD Core service, this value can be changed if you want to set a different version of MD Core
     replicas: 1                                         # Sets the number of replicas if you want to have multiple MD Core instances
     env:
       - name: MD_USER
@@ -188,9 +188,9 @@ core_components:
           secretKeyRef:
             name: mdcore-stack-configs
             key: IGNITION_JSON
-      - name: LOG_PATH
-        value: /home/metascan/$(MD_INSTANCE_NAME)
-    persistentDir: /home/metascan
+    #  - name: LOG_PATH
+    #    value: /home/metascan/$(MD_INSTANCE_NAME)
+    #persistentDir: /home/metascan
     tls:
       enabled: false
       certSecret: mdcore-tls-cert
@@ -235,7 +235,7 @@ core_components:
         maxSurge: 0
     initContainers:
       - name: check-db-ready
-        image: opswat/metadefendercore-debian:5.9.0
+        image: opswat/metadefendercore-debian:5.10.0
         imagePullPolicy: IfNotPresent
         envFrom:
           - configMapRef:
@@ -267,7 +267,7 @@ core_components:
           defaultMode: 0777
     initContainers:
       - name: wait-for-hub-services
-        image: opswat/metadefendercore-debian:5.9.0
+        image: opswat/metadefendercore-debian:5.10.0
         imagePullPolicy: IfNotPresent
         command: [ '/wait-for-hub-services.sh' ]
         volumeMounts:
