--- a/helm_charts/mdcore/Chart.yaml
+++ b/helm_charts/mdcore/Chart.yaml
@@ -1,6 +1,14 @@
 apiVersion: v2
 name: metadefender_core
-description: This is a Helm chart for deploying MetaDefender Core (https://www.opswat.com/products/metadefender/core) in a Kubernetes cluster
+description: | 
+  This is a Helm chart for deploying MetaDefender Core (https://www.opswat.com/products/metadefender/core) in a Kubernetes cluster. 
+
+  Release Notes
+  - MetaDefender Core version 5.10.1
+  - Environment variables to migrate processing history (Pre-steps needed)
+  - Environment variables to enable Licensing Cleanup and examples for Role/Rolebinding
+  - Fixed warning of kubernetes.io/ingress.class annotation for AWS and Azure. Added control flag to still use it for GCP
+
 
 long_description: |
   This chart can deploy the following depending on the provided values:
@@ -42,5 +50,5 @@ long_description: |
   
 type: application
 
-version: 0.0.29
-appVersion: 5.10.0
+version: 0.0.30
+appVersion: 5.10.1
