--- a/.github/workflows/release_helm_charts.yml
+++ b/.github/workflows/release_helm_charts.yml
@@ -37,5 +37,5 @@ jobs:
           charts_dir: helm_charts/
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_SKIP_EXISTING: true
+          CR_SKIP_EXISTING: false
         
